# royalpack

./: .gitignore  alembic.ini  pyproject.toml
.github/workflows/: stefflow.yml  tests.yml
royalpack/: __main__.py
royalpack/bolts/: login.py
royalpack/commands/: __init__.py  ahnonlosoio.py  answer.py  balance.py  cat.py  ciao.py  ciaoruozi.py  color.py  cv.py  debug.py  diobot.py  dog.py  emojify.py  fiorygi.py  fortune.py  help.py  login.py  man.py  ping.py  pmots.py  rage.py  roll.py  ship.py  smecds.py  spell.py  whoami.py
royalpack/database/: base.py  engine.py
royalpack/database/alembic/versions/: 8b28a4a94552_second_revision.py
royalpack/database/tables/: __init__.py  _imports.py  rage.py
