[tool.poetry]
name = "royalpack"
version = "6.0.0a1"
description = ""
authors = ["Stefano Pigozzi <ste.pigozzi@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
royalnet-discordpy = "^0.1.9"
coloredlogs = "^15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
