[tool.poetry]
name = "royalpack"
version = "6.0.0"
description = "Royalnet Commands for the RYG community"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/RYGhub/royalpack"
keywords = ["royalnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8"
royalnet = "~6.2.1"
coloredlogs = "^15.0"
aiohttp = "^3.7.4"
royalnet-telethon = "~0.2.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
royalnet_console = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
